fix visibility of placeholder

--- a/src/core/_config.scss
+++ b/src/core/_config.scss
@@ -733,6 +733,7 @@ $hierarchy-line-color: $theme-color-palette-graphite-30;
 
 //Searchfield Colors
 $searchfield-bg-color: $theme-color-palette-graphite-20;
+$searchfield-background-color: $theme-color-palette-graphite-20;
 $searchfield-border-color: $theme-color-palette-graphite-30;
 $searchfield-icon-color: $button-color-tertiary-initial-font;
 $searchfield-text-color: $button-color-tertiary-initial-font;
