--- a/src/themes/theme-soho-contrast.scss
+++ b/src/themes/theme-soho-contrast.scss
@@ -635,6 +635,7 @@ $hierarchy-line-color: $theme-color-palette-graphite-100;
 
 // Searchfield Colors
 $searchfield-bg-color: $theme-color-palette-white;
+$searchfield-background-color: $theme-color-palette-white;
 $searchfield-border-color: $theme-color-palette-graphite-30;
 $searchfield-icon-color: $button-color-tertiary-initial-font;
 $searchfield-text-color: $button-color-tertiary-initial-font;
