--- a/src/themes/theme-soho-dark.scss
+++ b/src/themes/theme-soho-dark.scss
@@ -618,6 +618,7 @@ $hierarchy-line-color: $theme-color-palette-slate-40;
 
 // Searchfield Colors
 $searchfield-bg-color: $theme-color-palette-slate-70;
+$searchfield-background-color: $theme-color-palette-slate-70;
 $searchfield-border-color: $theme-color-palette-slate-100;
 $searchfield-icon-color: $button-color-tertiary-initial-font;
 $searchfield-text-color: $button-color-tertiary-initial-font;
