--- a/src/themes/theme-uplift-dark.scss
+++ b/src/themes/theme-uplift-dark.scss
@@ -614,6 +614,7 @@ $hierarchy-line-color: $theme-color-palette-slate-40;
 
 // Searchfield Colors
 $searchfield-bg-color: $theme-color-palette-slate-70;
+$searchfield-background-color: $theme-color-palette-slate-80;
 $searchfield-border-color: $theme-color-palette-slate-100;
 $searchfield-icon-color: $button-color-tertiary-initial-font;
 $searchfield-text-color: $button-color-tertiary-initial-font;
